--- a/boteco_pro_flutter/pubspec.yaml
+++ b/boteco_pro_flutter/pubspec.yaml
@@ -7,28 +7,25 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  flutter_secure_storage: ^9.0.0
-  jwt_decode: ^0.3.1
-  google_sign_in: ^6.0.0
   audioplayers: ^6.0.0
   http_interceptor: ^2.0.0
   dio: ^5.3.3
   image_picker: ^1.0.0
-  flutter_animate: ^4.5.0
+  flutter_animate: ^4.2.0
   flutter_launcher_icons: ^0.14.3
   table_calendar: ^3.0.0
   flutter_slidable: ^4.0.0
   flutter_svg: ^2.0.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.0
-  fl_chart: ^0.65.0
+  fl_chart: ^1.0.0
   google_fonts: ^6.2.1
   shared_preferences: ^2.5.3
   path_provider: ^2.1.5
-  provider: ^6.1.1
-  http: ^1.2.2
+  provider: ^6.1.5
+  http: '>=1.0.0'
   uuid: '>=3.0.0'
 
 dev_dependencies:
@@ -40,4 +37,3 @@ flutter:
 
   assets:
     - assets/sounds/
-    - assets/images/
