--- a/Frontend/v1.0/boteco_p_r_o_v_0/pubspec.yaml
+++ b/Frontend/v1.0/boteco_p_r_o_v_0/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   http: '>=1.0.0'
   uuid: '>=3.0.0'
 
+  dio: any
+  flutter_secure_storage: any
+  google_sign_in: any
+  jwt_decode: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
