--- a/Frontend/v1.2 (Não Considerar)/boteco_p_r_o_v_0/web/manifest.json
+++ b/Frontend/v1.2 (Não Considerar)/boteco_p_r_o_v_0/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dreamflow",
-    "short_name": "dreamflow",
+    "name": "botecopro",
+    "short_name": "botecopro",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
