--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
+    "@types/react": "^19.1.6",
+    "@vitejs/plugin-react": "^4.5.1",
     "typescript": "^4.9.0",
-    "vite": "^4.3.0"
+    "vite": "^6.3.5"
   }
 }
